@@ -1144,6 +1144,10 @@ static void	execute_operations(DB_ESCALATION *escalation, DB_EVENT *event, DB_AC
 			escalation->status = (action->recovery_msg == 1) ? ESCALATION_STATUS_SLEEP : ESCALATION_STATUS_COMPLETED;
 	}
 
+	/* schedule nextcheck for sleeping escalations */
+	if (ESCALATION_STATUS_SLEEP == escalation->status)
+		escalation->nextcheck = time(NULL) + SEC_PER_MIN;
+
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
 }
 
@@ -1563,7 +1567,7 @@ static void	execute_escalation(DB_ESCALATION *escalation)
 	zabbix_log(LOG_LEVEL_DEBUG, "End of %s()", __function_name);
 }
 
-static int	process_escalations(int now)
+static int	process_escalations(int now, int *nextcheck)
 {
 	const char		*__function_name = "process_escalations";
 	DB_RESULT		result;
@@ -1586,10 +1590,13 @@ static int	process_escalations(int now)
 			" order by actionid,triggerid,itemid,escalationid",
 			DBwhere_node_local("escalationid"));
 
+	*nextcheck = now + CONFIG_ESCALATOR_FREQUENCY;
 	memset(&escalation, 0, sizeof(escalation));
 
 	do
 	{
+		unsigned char	esc_superseded = 0;
+
 		memset(&last_escalation, 0, sizeof(last_escalation));
 
 		if (NULL != (row = DBfetch(result)))
@@ -1609,43 +1616,40 @@ static int	process_escalations(int now)
 				last_escalation.status = ESCALATION_STATUS_COMPLETED;
 		}
 
-		if (0 != escalation.escalationid)
+		if (0 == escalation.escalationid)
+			goto next;
+
+		if (ESCALATION_STATUS_COMPLETED == escalation.status)
 		{
-			unsigned char	esc_superseded = 0;
+			/* delete a recovery record and skip all processing */
+			zbx_vector_uint64_append(&escalationids, escalation.escalationid);
+			goto next;
+		}
 
-			if (ESCALATION_STATUS_COMPLETED == escalation.status)
+		if (0 != last_escalation.escalationid)
+		{
+			esc_superseded = (escalation.actionid == last_escalation.actionid &&
+					escalation.triggerid == last_escalation.triggerid &&
+					escalation.itemid == last_escalation.itemid);
+
+			if (0 != esc_superseded)
 			{
-				/* delete a recovery record and skip all processing */
-				zbx_vector_uint64_append(&escalationids, escalation.escalationid);
-				goto next;
-			}
-
-			if (0 != last_escalation.escalationid)
-			{
-				esc_superseded = (escalation.actionid == last_escalation.actionid &&
-						escalation.triggerid == last_escalation.triggerid &&
-						escalation.itemid == last_escalation.itemid);
-
-				if (0 != esc_superseded)
+				if (0 != last_escalation.r_eventid)
 				{
-					if (0 != last_escalation.r_eventid)
-					{
-						/* recover this escalation */
-						escalation.r_eventid = last_escalation.r_eventid;
-						escalation.status = ESCALATION_STATUS_ACTIVE;
-					}
-					else if (escalation.nextcheck > now ||
-							ESCALATION_STATUS_SLEEP == escalation.status)
-					{
-						zbx_vector_uint64_append(&escalationids, escalation.escalationid);
-						goto next;
-					}
+					/* recover this escalation */
+					escalation.r_eventid = last_escalation.r_eventid;
+					escalation.status = ESCALATION_STATUS_ACTIVE;
+				}
+				else if (escalation.nextcheck > now || ESCALATION_STATUS_SLEEP == escalation.status)
+				{
+					zbx_vector_uint64_append(&escalationids, escalation.escalationid);
+					goto next;
 				}
 			}
+		}
 
-			if (escalation.nextcheck > now && 0 == escalation.r_eventid)
-				goto next;
-
+		if (escalation.nextcheck <= now || 0 != escalation.r_eventid)
+		{
 			DBbegin();
 
 			sql_offset = 0;
@@ -1703,11 +1707,11 @@ static int	process_escalations(int now)
 				}
 				else
 				{
+					escalation.nextcheck = time(NULL) + SEC_PER_MIN;
 					zbx_snprintf_alloc(&sql, &sql_alloc, &sql_offset,
 							"update escalations set nextcheck=%d"
 							" where escalationid=" ZBX_FS_UI64,
-							escalation.nextcheck + SEC_PER_MIN,
-							escalation.escalationid);
+							escalation.nextcheck, escalation.escalationid);
 				}
 			}
 
@@ -1715,6 +1719,9 @@ static int	process_escalations(int now)
 
 			DBcommit();
 		}
+
+		if (ESCALATION_STATUS_COMPLETED != escalation.status && escalation.nextcheck < *nextcheck)
+			*nextcheck = escalation.nextcheck;
 next:
 		if (NULL != row)
 			memcpy(&escalation, &last_escalation, sizeof(escalation));
@@ -1761,27 +1768,55 @@ next:
  ******************************************************************************/
 void	main_escalator_loop(void)
 {
-	int	now, escalations_count = 0;
-	double	sec = 0.0;
+	int	now, nextcheck, sleeptime = -1, escalations_count = 0, old_escalations_count = 0;
+	double	sec, total_sec = 0.0, old_total_sec = 0.0;
+	time_t	last_stat_time;
+
+#define STAT_INTERVAL	5	/* if a process is busy and does not sleep then update status not faster than */
+				/* once in STAT_INTERVAL seconds */
 
 	zbx_setproctitle("%s [connecting to the database]", get_process_type_string(process_type));
+	last_stat_time = time(NULL);
 
 	DBconnect(ZBX_DB_CONNECT_NORMAL);
 
 	for (;;)
 	{
-		zbx_setproctitle("%s [processed %d escalations in " ZBX_FS_DBL " sec, processing escalations]",
-				get_process_type_string(process_type), escalations_count, sec);
+		if (0 != sleeptime)
+		{
+			zbx_setproctitle("%s [processed %d escalations in " ZBX_FS_DBL " sec, processing escalations]",
+					get_process_type_string(process_type), old_escalations_count, old_total_sec);
+		}
+
+		sec = zbx_time();
+		escalations_count += process_escalations(time(NULL), &nextcheck);
+		total_sec += zbx_time() - sec;
+
+		sleeptime = calculate_sleeptime(nextcheck, CONFIG_ESCALATOR_FREQUENCY);
 
 		now = time(NULL);
-		sec = zbx_time();
-		escalations_count = process_escalations(now);
-		sec = zbx_time() - sec;
 
-		zbx_setproctitle("%s [processed %d escalations in " ZBX_FS_DBL " sec, idle %d sec]",
-				get_process_type_string(process_type), escalations_count, sec,
-				CONFIG_ESCALATOR_FREQUENCY);
+		if (0 != sleeptime || STAT_INTERVAL <= now - last_stat_time)
+		{
+			if (0 == sleeptime)
+			{
+				zbx_setproctitle("%s [processed %d escalations in " ZBX_FS_DBL " sec, processing escalations]",
+						get_process_type_string(process_type), escalations_count, total_sec);
+			}
+			else
+			{
+				zbx_setproctitle("%s [processed %d escalations in " ZBX_FS_DBL " sec, idle %d sec]",
+						get_process_type_string(process_type), escalations_count, total_sec,
+						sleeptime);
 
-		zbx_sleep_loop(CONFIG_ESCALATOR_FREQUENCY);
+				old_escalations_count = escalations_count;
+				old_total_sec = total_sec;
+			}
+			escalations_count = 0;
+			total_sec = 0.0;
+			last_stat_time = now;
+		}
+
+		zbx_sleep_loop(sleeptime);
 	}
 }
