@@ -15,6 +15,7 @@ A.F....... [ZBX-1357] updated Brazilian Portuguese, French, Italian, Russian and
 ....I..PS. [ZBXNEXT-1257] dropped support for UCD-SNMP (asaveljevs)
 
 Bug fixes:
+........S. [ZBX-7326] improved escalator idle time calculations and statistics reporting (wiper)
 ..F....... [ZBX-7355] fixed various prototype confirmation messages (Ivo)
 ..F....... [ZBX-7408] removed unnecessary variables and includes in slide show configuration (Ivo)
 .D........ [ZBX-7034] improved Alias parameter description in the example configuration files (Richlv)
